# coredns-k8s-sync

./: .gitignore  Cargo.toml  Makefile  README.md  config.json
distribution/systemd/: Corefile  config.json  coredns-k8s-sync.service
examples/: db.home.lab  destination.home.lab  destination_test  source.grape.compose  source.home.lab  source.mandarin.compose  source.mandarin.k8s
kind-tests/: idec.yaml  metallb-pool.yaml
src/: config.rs  coredns_handler.rs  dns_record.rs  dns_record_collector.rs  file_watcher.rs  file_writer.rs  main.rs
testdata/:  grape.txt   kind.txt  grape.txt  test_write_dns_records_to_file_order
