[package]
name = "coredns-k8s-sync"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "serde_json", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "tracing"] }
log = "0.4.21"
env_logger = "0.11.3"
base64 = "0.22.0"
mockall = "0.12.1"
async-trait = "0.1.77"
getopts = "0.2.21"
# By default crossbeam-channel is used internally by notify. Which also allows the Watcher to be sync. This can cause issues when used inside tokio.
notify = {version = "6.1.1", default-features = false, features = ["macos_kqueue"]}
